fix font style in dark mode (frontend)

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -97,7 +97,7 @@
   --sidebar-accent-foreground: hsl(0 0% 85.1%);
   --sidebar-border: hsl(0 0% 20.78%);
   --sidebar-ring: hsl(0 0% 62.75%);
-  --font-sans: Inter, sans-serif;
+  --font-sans: Montserrat, sans-serif;
   --font-serif: Georgia, serif;
   --font-mono: Fira Code, monospace;
   --radius: 0.35rem;
